Remove Verbose explanations

--- a/Part-01.ipynb
+++ b/Part-01.ipynb
@@ -5,11 +5,7 @@
    "metadata": {},
    "source": [
     "## Text Classification\n",
-    "### A Getting Started Tutorial for Self Learners\n",
-    "\n",
-    "This is an unofficial fork of [javedsha/text-classification](https://github.com/javedsha/text-classification)\n",
-    "\n",
-    "Not a Jupyter notebook expert? Checkout on how to make the [Best of Jupyter](https://github.com/NirantK/best-of-jupyter) to improve your quality of life :) "
+    "### A Getting Started Tutorial for Self Learners"
    ]
   },
   {
@@ -54,17 +50,6 @@
    "source": [
     "# What is this dataset about? \n",
     "print(twenty_train.description)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ">The 20 Newsgroups data set is a collection of approximately 20,000 newsgroup documents, partitioned (nearly) evenly across 20 different newsgroups.\n",
-    "This has become a popular data set for experiments in  text applications of machine learning techniques, such as text classification and text clustering.\n",
-    "- (from the [official page at qwone](http://qwone.com/~jason/20Newsgroups/))\n",
-    "\n",
-    "Let's look at a single document that we need to classify:"
    ]
   },
   {
@@ -137,16 +122,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Why do we need to convert text to numbers?\n",
-    ">A problem with modeling text is that it is messy, and techniques like machine learning algorithms prefer well defined fixed-length inputs and outputs.\n",
-    "Machine learning algorithms cannot work with raw text directly; the text must be converted into numbers. Specifically, vectors of numbers.\n",
-    "\n",
-    " from Machine Learning Mastery's [Gentle Introduction to Bag of Words](https://machinelearningmastery.com/gentle-introduction-bag-words-model/)"
+    "### Why do we need to convert text to numbers?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,23 +164,6 @@
     "tfidf_transformer = TfidfTransformer()\n",
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
     "print(f'Shape of TFIDF Matrix: {X_train_tfidf.shape}') "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**On f-strings:** \n",
-    "You might have noticed the use of ```f' something goes here: '``` string syntax in the print statement above. They are fast-formatted-strings introduced in Python**3.6** and considerably more Pythonic than the earlier ```.format()``` syntax. \n",
-    "\n",
-    "If you have never used formatter strings from Python3.6, check [f-strings on cito's blog](https://cito.github.io/blog/f-strings/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's try **Naive Bayes** - a popular family of machine learning approches. We try Multinomial Naive Bayes here:"
    ]
   },
   {
@@ -253,13 +217,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's try **Logistic Regression**, which trains faster and is easier to interepret and understand. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -304,15 +261,6 @@
     "lr_predicted = text_lr_clf.predict(twenty_test.data)\n",
     "lr_clf_accuracy = np.mean(lr_predicted == twenty_test.target) * 100.\n",
     "print(f'Test Accuracy is {lr_clf_accuracy}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We used LR default parameters here. We can later optimize these using GridSearch or RandomSearch to improve accuracy even more. \n",
-    "\n",
-    "If you’re going to remember only one thing from this article, remember to use a linear model for sparse high-dimensional data such as text as bag-of-words or TF-IDF"
    ]
   },
   {
@@ -823,12 +771,7 @@
    "metadata": {},
    "source": [
     "### Tricks of Trade\n",
-    "#### Removing Stop Words\n",
-    "They are usually words like *the*, *then*, *a*, *of* etc. Stop words are words which occur too often across documents and don't help disntinguishing one document from another. Removing them from the data is usually the first trick to try. \n",
-    "\n",
-    "You should do this only when stop words are not useful for the underlying problem. In most of the text classification problems, this is indeed not useful. Let’s see if removing stop words increases the accuracy. \n",
-    "\n",
-    "Let's update the code:"
+    "#### Removing Stop Words"
    ]
   },
   {
@@ -853,8 +796,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploring spaCy\n",
-    "Let's look at an inside look at words which spaCy considers as stop words"
+    "### Exploring spaCy"
    ]
   },
   {
@@ -1248,17 +1190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**About spaCy objects**\n",
-    "- spaCy does some common NLP tasks such as tokenization, stop word analysis and lemmatization the momnent the object is created\n",
-    "- the spaCy tokenization and syntactic parsing is faster than NLTK and much more accurate\n",
-    "- You can learn more at [NLP with spaCy tutorial](https://dataflume.wordpress.com/2017/03/17/intro-nlp-python-spacy/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "spaCy has already tokenized the document and you can iterate over it:"
+    "**About spaCy objects**"
    ]
   },
   {
@@ -1450,9 +1382,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fastAI",
+   "display_name": "Python [conda env:nlp]",
    "language": "python",
-   "name": "fastai"
+   "name": "conda-env-nlp-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1464,7 +1396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
