--- a/Part-02-A.ipynb
+++ b/Part-02-A.ipynb
@@ -4,28 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Cleaning\n",
-    "\n",
-    "This is a code walkthrough for self-starters on most common text cleaning tasks.\n",
-    "After the end of this notebook, you will be able to: \n",
-    "1. Understand tokenization, do it manually yourself - and using spaCy\n",
-    "2. Understand why stop word removal and case standardization work - with spaCy examples\n",
-    "3. Differentiate between Stemming and Lemmatization - with spaCy lemmatization examples"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I have always liked **The Adventures of Sherlock Holmes** by _Arthur Conan Doyle_. Let's download the book and save it locally:"
+    "# Text Cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "url = 'http://www.gutenberg.org/ebooks/1661.txt.utf-8'\n",
@@ -34,10 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import urllib.request\n",
@@ -51,13 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "requirements.txt\n",
       "sherlock.txt\n"
      ]
     }
@@ -68,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,17 +69,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The file contains header and footer information from Project Gutenberg. We are not interested in the same and will discard the copyright and other legal notices. \n",
-    "Todo: \n",
-    "- Open the file and delete the header and footer information and save the file as ```sherlock_clean.txt```\n",
-    "\n",
-    "I opened the text file to see that I need to remove the first 33 lines. Let's do that using shell commands - which also work on Windows inside Jupyter notebook: "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -104,16 +77,6 @@
    "outputs": [],
    "source": [
     "!sed -i 1,33d sherlock.txt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I use the ```sed``` syntax. \n",
-    "\n",
-    "The ```-i``` flag tells to make the changes in place.  \n",
-    "```1,33d``` instructs to delete lines 1 to 33."
    ]
   },
   {
@@ -135,22 +98,6 @@
    ],
    "source": [
     "!head -5 sherlock.txt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What do I see? \n",
-    "\n",
-    "Before I continue to text cleaning for any Natural Language Processing Task, I like to spend a few seconds taking a quick glance at the data itself. I noted down some of the things I spotted below, of course a trained eye can see a lot more than I did: \n",
-    "\n",
-    "1. Dates are written in a mixed format: `twentieth of March, 1888`, times are too: `three o'clock`\n",
-    "1. Text is wrapped at around 70 columns, or no line can be longer than 70 characters \n",
-    "1. There are lot of proper nouns. These include names such as `Atkinson`, `Trepoff` in addition to locations such as `Trinconmalee` and `Baker Street` etc.\n",
-    "1. The index is in Roman numerals such as `I` and `IV` and not `1` or `4`\n",
-    "1. There are lot of dialogues such as: \"You have carte blanche.\" with no narrative around them. This storytelling style switches freely from a narrative to a dialogue driven. \n",
-    "1. The grammar and vocabulary is slightly unusual because of the time when Doyle wrote.  "
    ]
   },
   {
@@ -230,11 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For our machine learning models, we often need the words to occur as individual tokens or single words. This process is called:\n",
-    "\n",
     "## Tokenization \n",
-    "\n",
-    "We convert the raw text into a list of words. This preserves the original ordering of the text. \n",
     "\n",
     "### Split by Whitespace"
    ]
@@ -299,12 +242,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how the words red-headed were not split. This is something we may or may not want to keep always.  \n",
-    "\n",
-    "*Problem:* Punctuations are often appearing with the word itself, like: `Adler.` and `emotions,`.\n",
-    "\n",
-    "*Solution:* Simply extract words and discard everything else. This means we will discard all non-ASCII characters and punctuations.\n",
-    "\n",
     "### Split by Word Extraction\n",
     "**Introducing Regex**"
    ]
@@ -328,13 +265,6 @@
    "source": [
     "import re\n",
     "re.split('\\W+', 'Words, words, words.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Regular expressions can be daunting at first, but are very powerful. The regular expression `\\W+` means *a word character (A-Z etc.) repeated one or more times*."
    ]
   },
   {
@@ -386,15 +316,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We notice how `Adler` no longer has the punctuation with her. This is what we wanted. Mission Accomplished.  \n",
-    "\n",
-    "**What was the tradeoff we made here?** To understand that, let's look at another example: "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -416,12 +337,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have split `Isn't` to `Isn` and `t`. This is not good if you were working with say email or Twitter data, because you would've a lot more of such contractions. As a minor annoyance, we have an extra empty token at the end. \n",
-    "\n",
-    "Similarly, because we neglected punctuation `red-headed` is broken into two words: `red` and `headed`\n",
-    "\n",
-    "We can write custom rules in our tokenization strategy to cover all these cases. Or, use something which already has been written for us. \n",
-    "\n",
     "### spaCy for Tokenization"
    ]
   },
@@ -453,15 +368,6 @@
    "outputs": [],
    "source": [
     "doc = nlp(text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above syntax creates a spaCy object `doc`. The object pre-computes a lot of linguistic features, including tokens. \n",
-    "\n",
-    "We can retrieve them by calling the object iterator. Below, we call the iterator and `list` it. "
    ]
   },
   {
@@ -510,32 +416,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*Observations*:\n",
-    "- spaCy got the `Isn't` split as we wanted \n",
-    "- `red-headed` was broken into 3 tokens: `red`, `-`, `headed`. Since the punctuation information isn't lost, we can restore the original `red-headed` token if we want to\n",
-    "\n",
-    "**How does the spaCy tokenizer work ?**\n",
-    "\n",
-    "> First, the raw text is split on whitespace characters, similar to text.split(' '). Then, the tokenizer processes the text from left to right. On each substring, it performs two checks:\n",
-    "> \n",
-    "> - **Does the substring match a tokenizer exception rule?** For example, \"don't\" does not contain whitespace, but should be split into two tokens, \"do\" and \"n't\", while \"U.K.\" should always remain one token.\n",
-    "> - **Can a prefix, suffix or infix be split off?** For example punctuation like commas, periods, hyphens or quotes.\n",
-    ">\n",
-    "> ![caption](https://spacy.io/assets/img/tokenization.svg)\n",
-    "> from [spaCy-101](https://spacy.io/usage/spacy-101) docs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Sentence Tokenization**: We can also use spaCy to extract one sentence at a time, instead of one-word-at-a-time. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -564,9 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### STOP WORD REMOVAL & CASE CHANGE\n",
-    "\n",
-    "These simple ideas are widespread and fairly effective for a lot of tasks. They are particularly useful in reducing the number of unique tokens in a document for your processing.  "
+    "#### STOP WORD REMOVAL & CASE CHANGE"
    ]
   },
   {
@@ -642,15 +520,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Interesting, while `the` and `of` were marked as stop words, `THE` and `OF` were not. This is not a bug but by design. spaCy doesn't remove words which are probably important because of their CAPS or Title Case automatically. \n",
-    "\n",
-    "We can instead force this behaviour by converting our original text to lower case before we pass it to spaCy. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -704,13 +573,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can also extend the STOP WORDS dictionary on the fly for your domain. For instance, if you were using this code to process text of a NLP book, we might want to add words like `NLP`, `Processing`, `AGI`, `Data` etc. to stop words list. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {
@@ -753,18 +615,6 @@
    ],
    "source": [
     "[(token, token.is_stop, token.is_punct) for token in nlp(sentence_example)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exactly as expected, `NLP` and `AGI` are now marked as stop words too. \n",
-    "\n",
-    "Let's pull out string tokens which are not stop words into a Python list or similar data structure. \n",
-    "Most NLP tasks which come after text pre-processing expect string tokens and not spaCy token objects as datatype. \n",
-    "\n",
-    "We will remove both stop words and punctuations here for demonstration: "
    ]
   },
   {
@@ -811,15 +661,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stemming and Lemmatization\n",
-    "\n",
-    "> **Stemming** usually refers to a crude heuristic process that chops off the ends of words in the hope of achieving this goal correctly most of the time, and often includes the removal of derivational affixes. \n",
-    "\n",
-    "> **Lemmatization** usually refers to doing things properly with the use of a vocabulary and morphological analysis of words, normally aiming to remove inflectional endings only and to return the base or dictionary form of a word, which is known as the lemma. \n",
-    "\n",
-    "> If confronted with the token `saw`, stemming might return just `s`, whereas lemmatization would attempt to return either `see` or `saw` depending on whether the use of the token was as a verb or a noun.\n",
-    "\n",
-    "> - Christopher Manning et al, 2008, [IR-Book](https://nlp.stanford.edu/IR-book/html/htmledition/stemming-and-lemmatization-1.html) "
+    "## Stemming and Lemmatization"
    ]
   },
   {
@@ -827,10 +669,7 @@
    "metadata": {},
    "source": [
     "### spaCy for Lemmatization\n",
-    "\n",
-    "**spaCy only supports lemmatization**. As discussed by spaCy core contributor in [issue #327](https://github.com/explosion/spaCy/issues/327) on Github, stemmer's are rarely a good idea. \n",
-    "\n",
-    "We want to treat `meet/NOUN` as different from `meeting/VERB`. Unlike Stanford NLTK which was created to introduce as many NLP ideas as possible, spaCy takes an opinionated stand against stemming. "
+    "**spaCy only supports lemmatization** "
    ]
   },
   {
@@ -877,66 +716,13 @@
     "lemma_sentence_example = \"Their Apples & Banana fruit salads are amazing. Would you like meeting me at the cafe?\"\n",
     "[(token, token.lemma_, token.lemma, token.pos_ ) for token in nlp(lemma_sentence_example)]"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is a quite a few things going on here. Let's discuss them: \n",
-    "\n",
-    "**-PRON-**\n",
-    "\n",
-    "spaCy has a slightly annoying lemma (recall: lemma is the output of lemmatization): -PRON-. This is used as the lemma for all PRONouns such as `Their`, `you`, `me` and `I`. Some other NLP tools instead lemmatize to `I` instead of a placeholder `-PRON-`\n",
-    "\n",
-    "**(automatic) Lower casing**\n",
-    "\n",
-    "While checking for stop words, spaCy did not automatically lower case our input while comparison. On the other hand, while lemmatization it did. It converted `Apples` to `apple` and `Banana` to `banana`. \n",
-    "\n",
-    "**meeting to meet**\n",
-    "\n",
-    "Lemmatization is aware of the linguistic role the word plays in context. `Meeting` is converted to `meet` because it's a verb. spaCy does expose part of speech tagging and other linguistic features for us to use. We will learn how to query those soon. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### spaCy comparison with Stanford CoreNLP and NLTK\n",
-    "\n",
-    "|Feature|\tSpacy|\tNLTK|\tCore NLP|\n",
-    "        |---|---|-----|---|\n",
-    "|Python API|\tY|\tY|\tN|\n",
-    "|Multi Language support|\tY|\tY|\tY|\n",
-    "|Tokenization|\tY|\tY|\tY|\n",
-    "|Lemmatization| Y|\tY|\tY|\n",
-    "|Stemming|\tN|\tY|\tY|\n",
-    "|Part-of-speech tagging|\tY|\tY|\tY|\n",
-    "|Sentence segmentation|\tY|\tY|\tY|\n",
-    "|Dependency parsing|\tY|\tN|\tY|\n",
-    "|Entity Recognition|\tY|\tY|\tY|\n",
-    "|*Integrated word vectors*|\tY|\tN|\tN|\n",
-    "|Sentiment analysis|\tY|\tY|\tY|\n",
-    "|*Coreference resolution*|\tN|\tN|\tY|\n",
-    "|*Built-in Text Classification*|Y | N| N|\n",
-    "\n",
-    "- corrected the partially wrong and outdated version on [AnalyticsVidhya](https://www.analyticsvidhya.com/blog/2017/04/natural-language-processing-made-easy-using-spacy-%E2%80%8Bin-python/)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fastAI",
+   "display_name": "Python [conda env:nlp]",
    "language": "python",
-   "name": "fastai"
+   "name": "conda-env-nlp-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -948,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
