--- a/Part-03 NLP with spaCy and Textacy.ipynb
+++ b/Part-03 NLP with spaCy and Textacy.ipynb
@@ -4,39 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Leveraging Linguistics\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We are going to pick up a simple use case and see how we can solve that. Then, we repeat this again, but on a slighlty different text corpus and so on. \n",
-    "\n",
-    "This helps us learn build intuition on how to use linguistics in NLP. As mentioned, I am going to use spaCy here, but you are free to use NLTK or equivalent. There are programmatic differences in their API and style, but the underlying theme remains same. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Approach**:\n",
-    "This section is dedicated to introducing you to the ideas and tools from several decades of linguistics. The traditional way to introduce this to take an idea, talk about it at length and then put them together all in one piece like magic. \n",
-    "\n",
-    "Here, I am going to do the other way around. We will solve 2 problems and in the process, we will use look at the tools. Instead of talking to you about a Number 8 spanner, I am giving you a car engine, and the tools and introducing the tools as I use them myself. \n",
-    "\n",
-    "**Key Idea**: The Natural Language Pipeline\n",
-    "\n",
-    "Most NLP tasks are solved in a sequential pipeline, with results from one component feeding to the next. \n",
-    "\n",
-    "There is a wide variety of data structures used to store the pipeline results and intermediate steps. Here, for simplicity, I am going to use only the data structures already in spaCy and native Python one's like lists and dictionaries. \n",
-    "\n",
-    "\n",
-    "**Challenges**:\n",
-    "\n",
-    "Here, we will tackle the following real-life inspired challenges: \n",
-    "- Redacting names from any document e.g. for GDPR compliance\n",
-    "- Making quizzes from any text e.g. from a Wikipedia article"
+    "# Leveraging Linguistics"
    ]
   },
   {
@@ -47,38 +15,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can install spaCy via conda or pip. Since I am in a conda environment, I use the conda install from below: "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !conda install -y spacy \n",
+    "!conda install -y spacy \n",
     "# !pip install spacy"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's download the English language model provided by spaCy. We are doing to use 'en_core_web_lg', the 'lg' at the end stands for large. This means that this is the most comprehensive and best performing model that spaCy releases for general purpose use.\n",
-    "\n",
-    "You need to only do this once. "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !python -m spacy download en_core_web_lg"
+    "!python -m spacy download en_core_web_lg"
    ]
   },
   {
@@ -94,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Introducing textacy**:\n",
-    "\n",
-    "Textacy is a very underappreciated set of tools around spaCy. It's tagline is what it exactly does: NLP, before and after spaCy. It implements tools which use spaCy under the hood, ranging from data streaming utilities for production use to higher level text clustering functions. \n",
-    "\n",
-    "You can install textacy via pip or conda both. On conda, it's available on the 'conda-forge' channel instead of the main 'conda' channel. We mention this by adding a '-c' flag and the channel name after that.  "
+    "**Introducing textacy**:"
    ]
   },
   {
@@ -140,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !conda install -c conda-forge textacy \n",
+    "!conda install -c conda-forge textacy \n",
     "# !pip install textacy"
    ]
   },
@@ -158,22 +106,6 @@
    "metadata": {},
    "source": [
     "## Redacting Names with Named Entity Recognition"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Challenge: Replace all human names with [REDACTED] in free text**\n",
-    "\n",
-    "Consider that you are new engineer at European Bank Co. In preparation for GDPR, bank is scrubbing off names of customers from all their old records and specially internal communications like email and memos. They ask you to do this. \n",
-    "\n",
-    "The first way is to lookup names of your customers and match each of them against all your emails. This can be painfully slow, and error prone. A customer named John D'Souza, you might simply refer to him as DSouza in an email. An exact match for D'Souza will never be scrubbed.\n",
-    "\n",
-    "\n",
-    "Here, we will use an automatic NLP technique to assist us. We will parse all our emails from spaCy and simply replace the person names with the token [REDACTED]. This would be at least 5-10x faster than matching millions of substrings aginast millions of substrings.\n",
-    "\n",
-    "We will use a small excerpt from a Harry Potter book, talking about flu as an example. "
    ]
   },
   {
@@ -226,17 +158,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The spacy object doc has an atrribute 'ents' which stores all detected entities. In order to find this, spaCy has done few things behind the scenes for us e.g.\n",
-    "- Sentence Segmentation i.e. break the long text into smaller sentences\n",
-    "- Tokenization i.e. break each sentence into individual words or tokens\n",
-    "- Removed Stop Words i.e. remove words like _a, an, the, of_\n",
-    "- NER i.e. using statistical techniques, find out which entities are there in the text and label them with entity type"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -254,15 +175,6 @@
    ],
    "source": [
     "doc.ents"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The 'doc' object has a specific object called 'ents', short for entities which we can use to lookup all entities in our text. Additionally, each entity has as label. \n",
-    "\n",
-    "Tip: In spaCy, all information is stored by numeric hashing. So, `entity.label` will be a numeric entry like 378, while `entity.label_` will be human readable e.g. PERSON. "
    ]
   },
   {
@@ -313,13 +225,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Using spaCy's NER, let's write a simple function to replace each PERSON name with [REDACTED]: "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -334,17 +239,6 @@
     "        else:\n",
     "            redacted_sentence.append(token.string)\n",
     "    return \"\".join(redacted_sentence)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The function takes in text as string, parses it in the doc object using the nlp object which we loaded earlier. Then it traverses each token in the document (remember tokenization?). Each token is added to a list. If the token has the entity type of a person, it is replaced with [REDACTED] instead. \n",
-    "\n",
-    "At the end, we re-construct the original sentenced by converting this list back to a string. \n",
-    "\n",
-    "As an exercise, try doing above in-place i.e. by editing the original string itself instead of creating a new string.  "
    ]
   },
   {
@@ -368,15 +262,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This output is still leaky faucet if you are trying to make GDPR compliant edits. By using two [REDACTED] blocks instead of one, we are disclosing the number of words in a name. This can be seriously harmful if we were to use this in some other context, e.g. redacting location or organisation names too. \n",
-    "\n",
-    "Let's fix this:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -393,13 +278,6 @@
     "        else:\n",
     "            redacted_sentence.append(token.string)\n",
     "    return \"\".join(redacted_sentence)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We do this by using merging entities separately from the pipeline. "
    ]
   },
   {
@@ -427,34 +305,6 @@
    "metadata": {},
    "source": [
     "### Entity Types "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "spaCy supports the following entity types in the large language model which we loaded in the nlp object:\n",
-    "\n",
-    "|Type\t|Description\n",
-    "|---|---\n",
-    "|PERSON\t|People, including fictional.\n",
-    "|NORP\t|Nationalities or religious or political groups.\n",
-    "|FAC\t|Buildings, airports, highways, bridges, etc.\n",
-    "|ORG\t|Companies, agencies, institutions, etc.\n",
-    "|GPE\t|Countries, cities, states.\n",
-    "|LOC\t|Non-GPE locations, mountain ranges, bodies of water.\n",
-    "|PRODUCT\t|Objects, vehicles, foods, etc. (Not services.)\n",
-    "|EVENT\t|Named hurricanes, battles, wars, sports events, etc.\n",
-    "|WORK_OF_ART\t|Titles of books, songs, etc.\n",
-    "|LAW\t|Named documents made into laws.\n",
-    "|LANGUAGE\t|Any named language.\n",
-    "|DATE\t|Absolute or relative dates or periods.\n",
-    "|TIME\t|Times smaller than a day.\n",
-    "|PERCENT\t|Percentage, including \"%\".\n",
-    "|MONEY\t|Monetary values, including unit.\n",
-    "|QUANTITY\t|Measurements, as of weight or distance.\n",
-    "|ORDINAL\t|\"first\", \"second\", etc.\n",
-    "|CARDINAL\t|Numerals that do not fall under another type."
    ]
   },
   {
@@ -518,15 +368,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Interesting, the model got \"Taj Mahal\" wrong. Taj Mahal is obviously a world famous monument. But the model has made a believable mistake, because \"Taj Mahal\" was also the stage name of a Blues musician. \n",
-    "\n",
-    "In most production use cases, we \"fine-tune\" the in-built spaCy models for specific languages using our own annotations. This would teach the model that Taj Mahal for us is almost always a monument and not a Blues musician. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -566,30 +407,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, our pipeline is able to leverage the word 'University' to infer that Ashoka is a name of an organisation and not King Ashoka from Indian history. \n",
-    "\n",
-    "It has also figured out that 'Young India Fellowship' is one logical entity and has not tagged 'India' has a location. \n",
-    "\n",
-    "It helps me a lot to see a few examples such as above to form a mental model of what are the limits of what we can and cannot do. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Automatic Question Generation\n",
     "\n",
-    "The Challenge: Can you automatically convert a sentence to a question? \n",
-    "\n",
-    "For instance, 'Martin Luther King Jr. was a civil rights activist and skilled orator.' to 'Who was Martin Luther King Jr.?' \n",
-    "\n",
-    "Notice that when we convert a sentence to a question, the answer might not be in the original sentence anymore. To me, the answer to that question might be something different and that's fine. We are not aiming for answers here.\n",
-    "\n",
-    "### Part-of-Speech Tagging\n",
-    "\n",
-    "Sometimes, we want to quickly pull out keywords, or keyphrases from a larger body of text. This helps us mentally paint a picture of what this text is about. This is particularly helpful in analysis of texts like long emails or essays. \n",
-    "\n",
-    "As a quick hack, we can pull out all relevant \"nouns\". This is because most keywords are in fact nouns of some form. "
+    "### Part-of-Speech Tagging"
    ]
   },
   {
@@ -772,29 +592,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tip: This is slow O(n). As an exercise, can you think of a way to reduce this to O(1)? \n",
-    "\n",
-    "Hint: You can pre-compute some results and store them at cost of more memory.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, I am going to write a function to use the ruleset above and use a question template. \n",
-    "\n",
-    "Here is the broad outline which I will follow for each sentence: \n",
-    "\n",
-    "- For each rule id, check if all the required tags ('req_tags') meet the conditions \n",
-    "- Find the first rule id which matches, \n",
-    "- Find the words which match the required part of speech tags\n",
-    "- Fill in the corresponding question template and return the question string"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -828,15 +625,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Within each rule id match, I do something more: I am dropping all but the first match for each part-of-speech tag that I receive. For instance, when I query for \"NNP\", I later pick the first element with NNP[0], convert it to string and drop all other matches. \n",
-    "\n",
-    "While this is a perfectly good approach for simple sentences, this breaks down when you have conditional statements or complex reasoning. Let's run the above function for each sentence in the our example text and see what questions do we get:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -861,37 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is quite good. Obviously, I cheated a bit by writing exactly two rules for the two example sentences I already knew. In practice, you will need a much larger set, maybe 10-15 rulesets and corresponding templates just to have a decent coverage of \"What?\" questions. \n",
-    "\n",
-    "Another few rulesets might be needed to cover \"When\",\"Who\" and \"Where\" type of questions. For instance, \"Who plays Bansoori?\" is also a valid question from the second sentence above. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This means PoS tagging+rule driven engine can have a large coverage, a reasonable precision with respect to the questions - but it will still be a little tedious to maintain, debug and generalize this system. \n",
-    "\n",
-    "We need a set of better tools which is less reliant on the \"state\" of tokens and more on the relationship between them. This will allow us to change the relationship to form a question instead. This is where Dependency Parsing comes in. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Question Generation using Dependency Parsing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What is a dependency parser? \n",
-    "\n",
-    "> A dependency parser analyzes the grammatical structure of a sentence, establishing relationships between \"head\" words and words which modify those heads.\n",
-    "> from [Stanford NNDEP Project](https://nlp.stanford.edu/software/nndep.html)\n",
-    "\n",
-    "A dependency parser helps us understand the various ways in which parts of the sentence interact or depend on each other. For instance, how is the noun modified by adjectives. "
    ]
   },
   {
@@ -922,13 +680,6 @@
    "source": [
     "for token in doc:\n",
     "    print(token, token.dep_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some of these terms are simple enough to guess e.g. 'ROOT' is where the dependency tree might begin. 'nsubj' is the noun or nominal subject. 'cc' is probably conjunction. But this is still incomplete, luckily for us, spaCy includes the nifty `explain()` function to help us interpret these.  "
    ]
   },
   {
@@ -965,15 +716,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This gives us a good starting point to Google away and pick up some linguistics specific terms. E.g. a 'conjunct' is often used to connect two clauses. 'attribute' is simply a way to highlight something which is a property of the nominal subject. \n",
-    "\n",
-    "Nominal subjects are usually nouns or pronouns which in turns are actors (via verbs) or have properties(via attributes). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Visualizing the Relationship\n",
     "\n",
     "spaCy has an inbuilt tool called displacy for displaying simple, but clean and powerful visualizations. It offers two primary modes: Named Entity Recognition and Dependency Parsing. Here we will use the 'dep' or dependency mode. "
@@ -999,17 +741,6 @@
    ],
    "source": [
     "displacy.render(doc, style='dep', jupyter=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's take the first sentence for a quick study: We see that \"instrument\" is \"amod\" or adjectively modified by \"Indian classicial\". We pulled this phrase earlier as a noun chunk. \n",
-    "\n",
-    "This means that when we pulled noun phrase chunks out of this sentence, spaCy must have finished dependency parsing already under the hood. \n",
-    "\n",
-    "Also notice the direction of arrows, while the NOUN (instrument) is modified by ADJ. It is the 'attr' of the ROOT VERB (is). "
    ]
   },
   {
@@ -1140,32 +871,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This logical tree structure of simple sentences is what we will exploit to simplify our question generation. In order to do this, we need two important pieces: \n",
-    "- the main verb aka ROOT\n",
-    "- the subjects on which this ROOT verb is acting\n",
-    "\n",
-    "Let's write some functions to extract these dependency entities in the spaCy token format i.e. without converting them to strings. \n",
-    "\n",
-    "Alternatively, we can import them from textacy itself :)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "from textacy.spacier import utils as spacy_utils"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TIP: You can see the docstring AND function implementation using the '??' syntax in Jupyter notebook like this:"
    ]
   },
   {
@@ -1191,15 +902,6 @@
     "#             if tok.pos == VERB and tok.dep_ not in constants.AUX_DEPS]\n",
     "# File:      d:\\miniconda3\\envs\\nlp\\lib\\site-packages\\textacy\\spacier\\utils.py\n",
     "# Type:      function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we are to ask questions from someone, they often are around a piece of information e.g. What is the capital of India? or around some action e.g. What did you do on Sunday?\n",
-    "\n",
-    "Answering 'what' means we need to find out what the verbs are acting on. This means find the subjects of the verb. Let's take a more concrete but simple example to explore this: "
    ]
   },
   {
