--- a/Part-07 Building your own Chatbot in 30 minutes.ipynb
+++ b/Part-07 Building your own Chatbot in 30 minutes.ipynb
@@ -6,39 +6,16 @@
    "source": [
     "# Building your own Chatbot\n",
     "\n",
-    "Chatbots, or generally referred to conversation software are amazing tools for a lot of businesses. They help businesses server their clients server 24X7 without increasing effort, with consistent quality and the inbuilt option to defer to a human when the bots are not enough. \n",
-    "\n",
-    "They are great example where technology or AI has come to improve the impact human effort. \n",
-    "\n",
-    "They range from voice based solutions like Alexa to text based Intercom chat boxes to menu based navigation in Uber\n",
-    "\n",
-    "So far, we have seen one off application of every NLP topic that we have seen: \n",
-    "- text cleaning using grammar and vocabulary insights \n",
-    "- linguistics (and statistical parsers) to mine questions from text\n",
-    "- entity recognition for information extraction\n",
-    "- text similarity using text based vectors like GloVe/word2vec\n",
-    "\n",
-    "We now combine all of them into a lot more complicated setup and write our own chatbot, from scratch. But before you build anything from scratch, you should ask why.\n",
-    "\n",
     "## Why should I build the service again? \n",
     "\n",
-    "\n",
-    "##### Related: Why can't I use FB/MSFT/some other cloud service?\n",
-    "\n",
-    "- **Privacy and Competition**: As a business, is it a good idea to share information of your users with a Facebook, or Microsoft? Or even a smaller company? \n",
-    "- **Cost and Constraints**: Your funky cloud limits your design choices made by a particular intelligence provider to those made like Google or Facebook. Additionally, you are now paying for each http call you make, which is slower than locally running code too\n",
-    "- **Freedom to Customize and Extend**: You can develop a solution which performs better for you! You don't have to cure world hunger, just keep shipping an ever increasing more business value via quality software. If you are a bigco, you have all the more reason to invest in extendible software\n",
-    "\n",
-    "For the sake of simplicity, we will assume that our bot does not need to remember the context of any question. So it sees one input, and responds to it and is done. No links established with previous input"
+    "##### Related: Why can't I use FB/MSFT/some other cloud service?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Word Vectors + Heuristic - Fancy Stuff = Quick Working Code\n",
-    "\n",
-    "Let's start by simply loading the word vectors using gensim as we have seen earlier"
+    "## Word Vectors + Heuristic - Fancy Stuff = Quick Working Code"
    ]
   },
   {
@@ -145,13 +122,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's quickly check if we can vectorize any word by checking for word embedding for any word e.g. 'awesome' "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -171,25 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is the first challenge for us: **Figuring out the right user intent**.\n",
-    "\n",
-    "This is commonly referred to as the problem of intent categorization. \n",
-    "\n",
-    "As a toy example, we will try to build an order bot which someone like DoorDash/Swiggy/Zomato might use. \n",
-    "\n",
     "## Use Case: Food Order Bot\n",
-    "\n",
-    "Consider the following sample sentence:  “I’m looking for a cheap Chinese place in Indiranagar”\n",
-    "\n",
-    "We want to pick out Chinese as a cuisine type in the sentence. We can obviously do simple approaches, like exact substring match (search \"Chinese\") or TF-IDF based matches. \n",
-    "\n",
-    "Instead, we will generalize the model to discover cuisine types which we might not have identified yet, but we can learn about them via the GloVe embedding:\n",
-    "\n",
-    "We’ll keep it as simple as possible: \n",
-    "- provide some example cuisine types to tell the model that we need cuisines, and \n",
-    "- look for the most similar words in the sentence\n",
-    "\n",
-    "We’ll loop through the words in the sentence, and pick out the ones whose average cosine similarity to the reference words is above some threshold.\n",
     "\n",
     "### Do word vectors even work for this? "
    ]
@@ -202,17 +154,6 @@
    "source": [
     "cuisine_refs = [\"mexican\", \"thai\", \"british\", \"american\", \"italian\"]\n",
     "sample_sentence = \"I’m looking for a cheap Indian or Chinese place in Indiranagar\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For simplicity's sake, the code below is written as for loops, but can be vectorized for speed. \n",
-    "\n",
-    "We iterate over each word in the input sentence and find the similarity score with respect to known cuisine words. \n",
-    "\n",
-    "The higher the value, the more likely is the word to be something related to our cuisine references or `cuisine_refs`"
    ]
   },
   {
@@ -260,28 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The threshold is determined empirically. Notice that we are able to infer 'Indian' and 'Chinese' as cuisines, even if they are not part of the original set. \n",
-    "\n",
-    "Ofcourse, exact matches will have a much higher score.\n",
-    "\n",
-    "This is a good example where a better problem formulation, in terms of \"generic\" cuisine type which can be learned is more helpful than a dictionary based cuisine type. This also proves that we can rely on word vector based approaches. \n",
-    "\n",
-    "Can we extend this for user intent classification? Let's try this:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Next Stop: Classifying user intent\n",
-    "\n",
-    "We want to be able to put sentences in categories by user \"intents\". Intents are a generic mechanism which combine multiple individual example into one semantic umbrella e.g. \"hi\", \"hey\", \"good morning\", \"wassup!\" are all example of the intent: _greeting_\n",
-    "\n",
-    "Using 'greeting' as an input, the back end logic can then determin how to respond to user. \n",
-    "\n",
-    "There are many ways we could combine word vectors to represent a sentence, but again we’re going to do the simplest thing possible: add them up. \n",
-    "\n",
-    "This is definitely a less than ideal solution, but works in practice because of the simple unsupervised approach we use with this. "
+    "### Next Stop: Classifying user intent"
    ]
   },
   {
@@ -310,13 +230,6 @@
     "\n",
     "sentence_vector = sum_vecs(embed, sample_sentence)\n",
     "print(sentence_vector.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's define a data dictionary with some examples for each intent. This dictionary can be updated as we have more user inputs:"
    ]
   },
   {
@@ -380,13 +293,6 @@
     "    }\n",
     "\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The approach we have is simple, we find the centroid of each \"user intent\". A centroid is just a central point to denote each intent. Then, the incoming text is assigned to the user intent nearest to the corresponding cluster. "
    ]
   },
   {
@@ -475,9 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bot Responses\n",
-    "\n",
-    "We now know how to understand and categorize user intent. We now need to simply respond to each user intent with some corresponding responses. Let's these 'template' bot responses in one place:"
+    "## Bot Responses"
    ]
   },
   {
@@ -496,13 +400,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Storing the Response map in a separate entity is helpful. This means you can generate responses at a separate service from your intent understanding module and then glue them together. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -518,17 +415,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you'll notice carefully, there is no need for response map to be depend only on the intent categorized. You can convert this response map to a separate function which generates the map using related context and then picks a bot template. \n",
-    "\n",
-    "But here, for simplicity, let's keep it as a human interpretable dictionary/JSON style structure. \n",
-    "\n",
-    "Let's write a simple get_bot_response function which takes in the response mapping, templates, and the intent as inputs and return the actual bot response:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -541,13 +427,6 @@
     "    select_template = bot_response_map[intent]\n",
     "    templates = bot_templates[select_template]\n",
     "    return random.choice(templates)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's quickly tests this with one sentence: "
    ]
   },
   {
@@ -575,17 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Better Response Personalisation?**:\n",
-    "\n",
-    "You'll notice that the function picks one template at random for any particular \"bot intent\" so to say. While this is for simplicity here, in practice - you can train a ML model to pick a response personalized to user. \n",
-    "\n",
-    "A simple personalization to make is to be more coherent with the talking/typing style of the user itself. E.g. some user might be formal with \"Hello, how are you today?\", while other might be more informal with \"yo\". \n",
-    "\n",
-    "So \"Hello\" gets \"Goodbye!\" in response while \"yo!\" gets \"bye bye\" or even \"ttyl\" in the same conversation. \n",
-    "\n",
-    "---\n",
-    "\n",
-    "For now, let's go ahead and check the bot response for the sentences which we have already seen. "
+    "**Better Response Personalisation?**:"
    ]
   },
   {
@@ -614,7 +483,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (fastai)",
+   "display_name": "fastAI",
    "language": "python",
    "name": "fastai"
   },
